--- a/job/pom.xml
+++ b/job/pom.xml
@@ -169,7 +169,11 @@
             <artifactId>hadoop-hdfs</artifactId>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.eclipse.jdt</groupId>
+            <artifactId>core</artifactId>
+            <version>3.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
