--- a/storage/pom.xml
+++ b/storage/pom.xml
@@ -51,6 +51,11 @@
 
 
         <!-- Env & Test -->
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>2.8.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.hbase</groupId>
