--- a/streaming/pom.xml
+++ b/streaming/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>kylin</artifactId>
         <groupId>org.apache.kylin</groupId>
-        <version>0.7.1-SNAPSHOT</version>
+        <version>0.7.1-incubating-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
