KYLIN-673 sampling part of the raw data, not all data

--- a/conf/kylin.properties
+++ b/conf/kylin.properties
@@ -37,7 +37,8 @@ kylin.job.concurrent.max.limit=10
 kylin.job.yarn.app.rest.check.interval.seconds=10
 
 # Whether calculate cube in mem in each mapper;
-kylin.job.cubing.inMem=false
+kylin.job.cubing.inMem=true
+kylin.job.cubing.inMem.sampling.max=100000
 
 # The cut size for hbase region, in GB.
 # E.g, for cube whose capacity be marked as "SMALL", split region per 5GB by default
