--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -36,6 +36,9 @@ kylin.job.concurrent.max.limit=10
 # Whether calculate cube in mem in each mapper;
 kylin.job.cubing.inMem=false
 
+#the percentage of the sampling, default 25%
+kylin.job.cubing.inMem.sampling.percent=25
+
 # The cut size for hbase region, in GB.
 # E.g, for cube whose capacity be marked as "SMALL", split region per 5GB by default
 kylin.job.hbase.region.cut.small=5
