KYLIN-753 Make the dependency on hbase-common to "provided"

--- a/job/pom.xml
+++ b/job/pom.xml
@@ -138,8 +138,7 @@
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-common</artifactId>
-            <!-- This is default scope to be included in the job jar, we depends on
-                hbase utils like Bytes, ImmutableBytesWritable etc. -->
+            <scope>provided</scope>
         </dependency>
 
         <!-- Env & Test -->
